--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -31,6 +31,18 @@ jobs:
       env:
         - TOXENV={{ env }}
         - PYTHON_VERS={{ "{0[2]}.{0[3]}".format(env) }}
+    - os: osx
+      osx_image: xcode10.1
+      language: generic
+      env:
+        - TOXENV={{ env }}
+        - PYTHON_VERS={{ "{0[2]}.{0[3]}".format(env) }}
+    - os: osx
+      osx_image: xcode9.2
+      language: generic
+      env:
+        - TOXENV={{ env }}
+        - PYTHON_VERS={{ "{0[2]}.{0[3]}".format(env) }}
     - os: windows
       language: shell
       env:
