Moving all config that we can to pyproject.toml

--- a/ci/templates/tox.ini
+++ b/ci/templates/tox.ini
@@ -8,9 +8,6 @@ envlist =
 {% endfor %}
     report
 
-[pytest]
-testpaths = tests
-
 [testenv]
 basepython =
     docs: {env:TOXPYTHON:python3}
@@ -52,7 +49,7 @@ commands =
     black src tests setup.py
     flake8 src tests setup.py
     isort --verbose --check-only --diff --recursive src tests setup.py
-    bandit -c bandit.yml -r src
+    bandit
 
 [testenv:docs]
 usedevelop = true
