--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,13 @@
-bumpversion
-pytest
-pytest-cov
-pytest-faulthandler
-tox
-requires.io
-jedi
+bandit
 black
+bumpversion
 codacy-coverage
 coveralls
 codecov
+pytest
+pytest-bandit
+pytest-black
+pytest-cov
+pytest-faulthandler
+requires.io
+tox
