--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,8 @@ classifiers = [
 requires = ["setuptools", "wheel"]  # PEP 508 specifications.
 
 [tool.black]
-line-length = 79
+line-length = 88
+target-version= ['py36', 'py37', 'py38', ]
 include = '\.pyi?$'
 exclude = '''
 /(
