--- a/ci/templates/tox.ini
+++ b/ci/templates/tox.ini
@@ -20,6 +20,7 @@ passenv =
 deps =
     pytest
     pytest-travis-fold
+    coverage[toml]
 commands =
     python setup.py clean --all build_ext --force --inplace
     {posargs:pytest -vv --ignore=src}
