--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ passenv =
 deps =
     pytest
     pytest-travis-fold
+    coverage[toml]
 commands =
     python setup.py clean --all build_ext --force --inplace
     {posargs:pytest -vv --ignore=src}
@@ -54,7 +55,7 @@ commands =
     black src tests setup.py
     flake8 src tests setup.py
     isort --verbose --check-only --diff --recursive src tests setup.py
-    bandit -c bandit.yml -r src
+    bandit
 
 [testenv:docs]
 usedevelop = true
