Changing flake8 filename config

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,26 +3,26 @@ graft src
 graft ci
 graft tests
 
+include AUTHORS.rst
 include .bumpversion.cfg
+include CHANGELOG.rst
+include codecov.yml
+include CONTRIBUTING.rst
 include .cookiecutterrc
 include .editorconfig
 include .flake8
-include codecov.yml
+include flake8.ini
+include LICENSE
 include pytest.ini
 include pyproject.toml
-include readthedocs.yml
-
-
-include AUTHORS.rst
-include CHANGELOG.rst
-include CONTRIBUTING.rst
-include LICENSE
 include README.rst
-include TODO.rst
+include readthedocs.yml
 include requirements.txt
 include requirements-dev.txt
+include TODO.rst
+include tox.ini
+include .travis.yml
 
-include tox.ini .travis.yml
 
 prune __pycache__
 prune .ropeproject
