Cosmetic changes and more consolidation over pyproject.toml

--- a/ci/templates/tox.ini
+++ b/ci/templates/tox.ini
@@ -50,7 +50,7 @@ commands =
     black src tests setup.py
     flake8 --config flake8.ini src tests setup.py
     isort --verbose --check-only --diff --recursive src tests setup.py
-    bandit src
+    bandit -r src
 
 [testenv:docs]
 usedevelop = true
