--- a/tox.ini
+++ b/tox.ini
@@ -53,9 +53,9 @@ commands =
     python setup.py check --strict --metadata --restructuredtext
     check-manifest {toxinidir}
     black src tests setup.py
-    flake8 src tests setup.py
+    flake8 --config flake8.ini src tests setup.py
     isort --verbose --check-only --diff --recursive src tests setup.py
-    bandit
+    bandit -r src
 
 [testenv:docs]
 usedevelop = true
